Category topic list

--- a/resources/pug/latouts/_header.pug
+++ b/resources/pug/latouts/_header.pug
@@ -12,6 +12,17 @@ nav.navbar.navbar-default.navbar-static-top
       // Branding Image
       a.navbar-brand(href="{{ url('/') }}") LaraBBS
     #app-navbar-collapse.collapse.navbar-collapse
+      ul.nav.navbar-nav
+        li(class="{{ active_class(if_route('topics.index')) }}")
+          a(href="{{ route('topics.index') }}") 話題
+        li(class!="{{ active_class((if_route('categories.show') && if_route_param('category', 1))) }}")
+          a(href="{{ route('categories.show', 1) }}") 分享
+        li(class!="{{ active_class((if_route('categories.show') && if_route_param('category', 2))) }}")
+          a(href="{{ route('categories.show', 2) }}") 教學
+        li(class!="{{ active_class((if_route('categories.show') && if_route_param('category', 3))) }}")
+          a(href="{{ route('categories.show', 3) }}") 問答
+        li(class!="{{ active_class((if_route('categories.show') && if_route_param('category', 4))) }}")
+          a(href="{{ route('categories.show', 4) }}") 公告
       // Left Side Of Navbar
       ul.nav.navbar-nav
       // Right Side Of Navbar
