--- a/resources/pug/latouts/app.pug
+++ b/resources/pug/latouts/app.pug
@@ -20,3 +20,7 @@ html(lang!='{{ app()->getLocale() }}')
       @include('layouts._footer')
     // Scripts
     script(src="{{ asset('js/app.js') }}")
+    | @if ( Config::get('app.debug') )
+    script(type='text/javascript').
+      document.write('<script src="//localhost:35729/livereload.js?snipver=1" type="text/javascript"><\\/script>')
+    | @endif
