List topics created by user

--- a/resources/pug/latouts/_footer.pug
+++ b/resources/pug/latouts/_footer.pug
@@ -1,11 +1,10 @@
 //output:../../views/layouts/_footer.blade.php
 
-footer.footer
+footer.footer(style="background-color: #ff5;")
   .container
-    p.pull-left
-      | 由 
+    p.pull-left 由 
       a(href='http://weibo.com/u/1837553744?is_hot=1', target='_blank') Summer
-      |  設計與編碼 
+      p 設計與編碼 
       span(style='color: #e27575;font-size: 14px;')
     p.pull-right
       a(href='mailto:name@email.com') 關於我們
