--- a/resources/pug/latouts/_header.pug
+++ b/resources/pug/latouts/_header.pug
@@ -1,5 +1,9 @@
 //output:../../views/layouts/_header.blade.php
 
+
+//- link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css')
+//- script(type='text/javascript', src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js') */ */
+
 nav.navbar.navbar-default.navbar-static-top
   .container
     .navbar-header
@@ -34,18 +38,26 @@ nav.navbar.navbar-default.navbar-static-top
         li
           a(href="{{ route('register') }}") 註冊
         @else
-        li.dropdown
-          a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
+        div.dropdown.show
+          a#dropdownMenuLink.btn.btn-secondary.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
             span.user-avatar.pull-left(style='margin-right:8px; margin-top:-5px;')
               img.img-responsive.img-circle(src!="{{ Auth::user()->avatar }}", width='30px', height='30px')
             {{ Auth::user()->name }} 
             span.caret
-          ul.dropdown-menu(role='menu')
-            li
-              a(href="{{ route('users.edit', Auth::id()) }}") 編輯資料
-            li
-              a(href="{{ route('logout') }}", onclick="event.preventDefault();\
-              document.getElementById('logout-form').submit();") 登出
-              form#logout-form(action="{{ route('logout') }}", method='POST', style='display: none;')
-                {{ csrf_field() }}
-        @endguest
+            ul.dropdown-menu(role='menu')
+              li
+                a(href="{{ route('users.show', Auth::id()) }}") 
+                  span.glyphicon.glyphicon-user(aria-hidden='true') &nbsp;個人中心
+              li
+                a(href="{{ route('users.edit', Auth::id()) }}") 
+                  span.glyphicon.glyphicon-edit(aria-hidden='true') &nbsp;編輯資料
+              li
+                a(href="{{ route('logout') }}", onclick="event.preventDefault();\
+                document.getElementById('logout-form').submit();")
+                  span.glyphicon.glyphicon-log-out(aria-hidden='true') &nbsp;退出登入
+                form#logout-form(action="{{ route('logout') }}", method='POST', style='display: none;') {{ csrf_field() }}
+            @endguest
+            
+script(src="{{ URL::asset('js/jquery-3.3.1.slim.min.js') }}")
+script(src="{{ URL::asset('js/popper.min.js') }}") */
+script(type='text/javascript', src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js')
