--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,8 +1,6 @@
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
-// Variables
-@import "variables";
-// Bootstrap
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600"); // Variables
+@import "variables"; // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 /* universal */
 body {
@@ -16,6 +14,19 @@ body {
     border-top: 4px solid #00b5ad;
     margin-bottom: 40px;
     margin-top: 0;
+
+    .dropdown-menu {
+        padding: 0;
+
+        li a {
+            border-bottom: 1px solid #d8d8d8;
+            line-height: 2.4;
+
+            .glyphicon {
+                margin-right: 8px;
+            }
+        }
+    }
 }
 /* Sticky footer styles */
 html {
@@ -65,8 +76,43 @@ body {
         cursor: pointer;
     }
 }
+
+/* User profile page */
+.users-show-page {
+    .user-info {
+        .thumbnail {
+            margin-bottom: 0px;
+        }
+    }
+
+    .nav-tabs {
+        margin-bottom: 20px;
+
+        >li.active > a {
+            background-color: #fff;
+        }
+    }
+
+    .list-group {
+        .list-group-item {
+            border: none;
+            margin-bottom: 0px;
+            border-bottom: 1px solid #efefef;
+
+            .meta {
+                color: #b3b3b3;
+            }
+        }
+    }
+
+    .pagination {
+        margin: 12px 0;
+    }
+}
+
 /* Topic Index Page */
-.topics-index-page, .categories-show-page{
+.categories-show-page,
+.topics-index-page {
     .topic-list {
         .nav > li > a {
             position: relative;
