--- a/resources/pug/topics/create_and_edit.pug
+++ b/resources/pug/topics/create_and_edit.pug
@@ -38,3 +38,19 @@
               |  保存
 
 | @endsection
+
+| @section('styles')
+link(rel='stylesheet', type='text/css', href="{{ asset('css/simditor.css') }}")
+| @stop
+| @section('scripts')
+script(type='text/javascript', src="{{ asset('js/module.js') }}")
+script(type='text/javascript', src="{{ asset('js/hotkeys.js') }}")
+script(type='text/javascript', src="{{ asset('js/uploader.js') }}")
+script(type='text/javascript', src="{{ asset('js/simditor.js') }}")
+script.
+  $(document).ready(function(){
+  var editor = new Simditor({
+  textarea: $('#editor'),
+  });
+  });
+| @stop
