--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8393,14 +8393,6 @@ body {
   margin-bottom: 60px;
 }
 
-.sidebar {
-  background-color: #fff;
-  -webkit-box-shadow: 0 1px 11px 2px rgba(42, 42, 42, 0.1);
-          box-shadow: 0 1px 11px 2px rgba(42, 42, 42, 0.1);
-  margin-bottom: 40px;
-  margin-top: 0;
-}
-
 .footer {
   position: absolute;
   bottom: 0;
@@ -8430,6 +8422,34 @@ body {
   margin-bottom: 0;
   margin-top: 10px;
   cursor: pointer;
+}
+
+/* User profile page */
+
+.users-show-page .user-info .thumbnail {
+  margin-bottom: 0px;
+}
+
+.users-show-page .nav-tabs {
+  margin-bottom: 20px;
+}
+
+.users-show-page .nav-tabs > li.active > a {
+  background-color: #fff;
+}
+
+.users-show-page .list-group .list-group-item {
+  border: none;
+  margin-bottom: 0px;
+  border-bottom: 1px solid #efefef;
+}
+
+.users-show-page .list-group .list-group-item .meta {
+  color: #b3b3b3;
+}
+
+.users-show-page .pagination {
+  margin: 12px 0;
 }
 
 /* Topic Index Page */
