--- a/resources/pug/latouts/app.pug
+++ b/resources/pug/latouts/app.pug
@@ -11,6 +11,7 @@ html(lang!='{{ app()->getLocale() }}')
     title @yield('title', 'LaraBBS') - Laravel 進階教學
     // Styles
     link(href="{{ asset('css/app.css') }}", rel='stylesheet')
+    @yield('styles')
   body
     #app(class='{{ route_class() }}-page')
       @include('layouts._header')
@@ -20,12 +21,4 @@ html(lang!='{{ app()->getLocale() }}')
       @include('layouts._footer')
     // Scripts
     script(src="{{ asset('js/app.js') }}")
-    @if ( Config::get('app.debug') )
-    script(type='text/javascript').
-      document.write('<script src="//localhost:35729/livereload.js?snipver=1" type="text/javascript"><\\/script>')
-    @endif
-    
-    @if ( Config::get('app.debug') )
-    script(type='text/javascript').
-      document.write('<script src="//localhost:35729/livereload.js?snipver=1" type="text/javascript"><\\/script>')
-    @endif
+    @yield('scripts')
