--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,22 +1,27 @@
-// Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600"); // Variables
-@import "variables"; // Bootstrap
+// Variables
+@import "variables";
+
+// Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
 /* universal */
+
 body {
     font-family: Hiragino Sans GB, "Hiragino Sans GB", Helvetica, "Microsoft YaHei", Arial,sans-serif;
 }
+
 /* header */
+
 .navbar-static-top {
     border-color: #e7e7e7;
     background-color: #fff;
-    box-shadow: 0 1px 11px 2px rgba(42, 42, 42, 0.1);
+    box-shadow: 0px 1px 11px 2px rgba(42, 42, 42, 0.1);
     border-top: 4px solid #00b5ad;
     margin-bottom: 40px;
-    margin-top: 0;
+    margin-top: 0px;
 
     .dropdown-menu {
-        padding: 0;
+        padding: 0px;
 
         li a {
             border-bottom: 1px solid #d8d8d8;
@@ -29,11 +34,11 @@ body {
     }
 }
 /* Sticky footer styles */
+
 html {
     position: relative;
-    min-height: 100%;
+    min-height: 100% ;
 }
-
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
@@ -42,7 +47,7 @@ body {
 .footer {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 100% ;
     /* Set the fixed height of the footer here */
     height: 60px;
     background-color: #000;
@@ -61,10 +66,11 @@ body {
         }
     }
 }
+
 /* User register page */
 .register-page {
     img.captcha {
-        margin-bottom: 0;
+        margin-bottom: 0px;
         margin-top: 10px;
         cursor: pointer;
     }
@@ -101,11 +107,18 @@ body {
     .pagination {
         margin: 12px 0;
     }
+
+    .meta {
+        font-size: .9em;
+        color: #b3b3b3;
+    }
+    .rpely-content {
+        margin: 6px 0;
+    }
 }
 
 /* Topic Index Page */
-.categories-show-page,
-.topics-index-page {
+.topics-index-page, .categories-show-page, .root-page {
     .topic-list {
         .nav > li > a {
             position: relative;
@@ -113,29 +126,92 @@ body {
             padding: 5px 14px;
             font-size: 0.9em;
         }
-
         a {
             color: #444444;
         }
-
         .meta {
-            font-size: 0.9em;
+            font-size:0.9em;
             color: #b3b3b3;
-
             a {
-                color: #b3b3b3;
+               color: #b3b3b3;
             }
         }
-
         .badge {
             background-color: #d8d8d8;
         }
-
         hr {
             margin-top: 12px;
             margin-bottom: 12px;
             border: 0;
             border-top: 1px solid #dcebf5;
+        }
+    }
+}
+
+/* Topic Show Page */
+
+@import "topic_body";
+
+.topics-show-page {
+
+    .panel {
+        padding: 15px;
+
+        h1 {
+            margin: 0.4em auto 0.6em;
+            font-size: 28px;
+            line-height: 38px;
+        }
+    }
+}
+
+.topic-reply {
+    hr {
+        margin-top: 16px;
+        margin-bottom: 16px;
+    }
+
+    a {
+        color: inherit;
+    }
+
+    .meta {
+        font-size: .9em;
+        color: #b3b3b3;
+    }
+}
+
+/* Notifications badge */
+
+.notifications-badge {
+    margin-top: -1;
+
+    .badge-fade {
+        background-color: #EBE8E8;
+    }
+
+    .badge-hint {
+        background-color: #d15b47 !important;;
+    }
+}
+
+/* Sidebar */
+
+.sidebar {
+    .panel-body {
+        padding: 12px;
+    }
+
+    hr {
+        margin-top: 8px;
+        margin-bottom: 10px;
+    }
+
+    .active-users {
+        a.media {
+            color: #797878;
+            line-height: 26px;
+            font-size: 0.9em;
         }
     }
 }
