Topic detail page

--- a/resources/pug/latouts/app.pug
+++ b/resources/pug/latouts/app.pug
@@ -9,6 +9,8 @@ html(lang!='{{ app()->getLocale() }}')
     // CSRF Token
     meta(name='csrf-token', content='{{ csrf_token() }}')
     title @yield('title', 'LaraBBS') - Laravel 進階教學
+    meta(name='description', content="@yield('description', 'LaraBBS 愛好者社區')")
+
     // Styles
     link(href="{{ asset('css/app.css') }}", rel='stylesheet')
     @yield('styles')
