--- a/resources/pug/topics/show.pug
+++ b/resources/pug/topics/show.pug
@@ -38,4 +38,22 @@
             button.btn.btn-default.btn-xs.pull-left(type='submit')
               i.glyphicon.glyphicon-trash 刪除
         @endcan
-@stop
+    | {{-- 用戶回覆列表 --}}
+    .panel.panel-default.topic-reply
+      .panel-body
+        | @include('topics._reply_box', ['topic' => $topic])
+        | @include('topics._reply_list', ['replies' => $topic->replies()->with('user')->get()])
+    | {{-- 用戶發布的內容 --}}
+    .panel.panel-default
+        .panel-body
+          ul.nav.nav-tabs
+            li(class="{{ active_class(if_query('tab', null)) }}")
+              a(href!="{{ route('users.show', $user->id) }}") Ta 的話題
+            li(class="{{ active_class(if_query('tab', 'replies')) }}")
+              a(href!="{{ route('users.show', [$user->id, 'tab' => 'replies']) }}") Ta 的回覆
+          | @if (if_query('tab', 'replies'))
+          | @include('users._replies', ['replies' => $user->replies()->with('topic')->recent()->paginate(5)])
+          | @else
+          | @include('users._topics', ['topics' => $user->topics()->recent()->paginate(5)])
+          | @endif
+| @stop
