--- a/resources/pug/topics/show.pug
+++ b/resources/pug/topics/show.pug
@@ -27,33 +27,22 @@
           | {{ $topic->reply_count }}
         .topic-body
           | {!! $topic->body !!}
-        @can('update', $topic)
+        | @can('update', $topic)
         .operate
           hr
-          a.btn.btn-default.btn-xs(href!="{{ route('topics.edit', $topic->id) }}", role='button')
-            i.glyphicon.glyphicon-edit 編輯
-          form(action!="{{ route('topics.destroy', $topic->id) }}", method='post')
+          a.btn.btn-default.btn-xs.pull-left(href!="{{ route('topics.edit', $topic->id) }}", role='button')
+            i.glyphicon.glyphicon-edit
+            |  編輯
+          form(action!="{{ route('topics.destroy', $topic->id) }}", method='post', style='display: inherit')
             | {{ csrf_field() }}
             | {{ method_field('DELETE') }}
-            button.btn.btn-default.btn-xs.pull-left(type='submit')
-              i.glyphicon.glyphicon-trash 刪除
-        @endcan
-    | {{-- 用戶回覆列表 --}}
+            button.btn.btn-default.btn-xs.pull-left(type='submit', style='margin-left: 6px')
+              i.glyphicon.glyphicon-trash
+              | 刪除
+        | @endcan
+    | {{-- 用户回复列表 --}}
     .panel.panel-default.topic-reply
       .panel-body
-        | @include('topics._reply_box', ['topic' => $topic])
+        | @includeWhen(Auth::check(), 'topics._reply_box', ['topic' => $topic])
         | @include('topics._reply_list', ['replies' => $topic->replies()->with('user')->get()])
-    | {{-- 用戶發布的內容 --}}
-    .panel.panel-default
-        .panel-body
-          ul.nav.nav-tabs
-            li(class="{{ active_class(if_query('tab', null)) }}")
-              a(href!="{{ route('users.show', $user->id) }}") Ta 的話題
-            li(class="{{ active_class(if_query('tab', 'replies')) }}")
-              a(href!="{{ route('users.show', [$user->id, 'tab' => 'replies']) }}") Ta 的回覆
-          | @if (if_query('tab', 'replies'))
-          | @include('users._replies', ['replies' => $user->replies()->with('topic')->recent()->paginate(5)])
-          | @else
-          | @include('users._topics', ['topics' => $user->topics()->recent()->paginate(5)])
-          | @endif
 | @stop
