--- a/resources/pug/latouts/_header.pug
+++ b/resources/pug/latouts/_header.pug
@@ -41,6 +41,11 @@ nav.navbar.navbar-default.navbar-static-top
         li
           a(href="{{ route('topics.create') }}")
             span.glyphicon.glyphicon-plus(aria-hidden='true')
+        | {{-- 消息通知标记 --}}
+        li
+          a.notifications-badge(href="{{ route('notifications.index') }}", style='margin-top: -2px;')
+            span.badge(class!="badge-{{ Auth::user()->notification_count > 0 ? 'hint' : 'fade' }}", title='消息提醒')
+              | {{ Auth::user()->notification_count }}
         li.dropdown
           a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
             span.user-avatar.pull-left
