Add manage contents permission and visit horizon dashboard permission

--- a/resources/pug/latouts/app.pug
+++ b/resources/pug/latouts/app.pug
@@ -21,6 +21,9 @@ html(lang!='{{ app()->getLocale() }}')
         @include('layouts._message')
         @yield('content')
       @include('layouts._footer')
+      @if(app()->isLocal())
+      @include('sudosu::user-selector')
+      @endif
     // Scripts
     script(src="{{ asset('js/app.js') }}")
     @yield('scripts')
