--- a/resources/pug/latouts/_footer.pug
+++ b/resources/pug/latouts/_footer.pug
@@ -7,4 +7,4 @@ footer.footer(style="background-color: #ff5;")
       p 設計與編碼 
       span(style='color: #e27575;font-size: 14px;')
     p.pull-right
-      a(href='mailto:name@email.com') 關於我們
+      a(href="mailto:{{ setting('contact_email') }}") 關於我們
