--- a/resources/pug/users/show.pug
+++ b/resources/pug/users/show.pug
@@ -19,6 +19,10 @@
             h4
               strong 註冊於
             p {{ $user->created_at->diffForHumans() }}
+            hr
+            h4
+              strong 最後活躍
+            p(title!='{{  $user->last_actived_at }}') {{ $user->last_actived_at->diffForHumans() }}
   .col-lg-9.col-md-9.col-sm-12.col-xs-12
     .panel.panel-default
       .panel-body
